# webrtc-windows

./: .gitignore  LICENSE  README.md
nuget/: Org.WebRtc.nuspec  Org.WebRtc.targets  WebRtc.nuspec  WebRtc.targets  webrtc_winrt_api.nuspec  webrtc_winrt_api.targets
nuget/templates/: WebRtc.Nuget.sln  WebRtc.nuspec  WebRtc.targets  WebRtc.win.nuspec  WebRtc.win.targets  WebRtc.winuwp.nuspec
org/webrtc/stats/: webrtc_stats_network_sender.cpp  webrtc_stats_network_sender.h  webrtc_stats_observer.cpp  webrtc_stats_observer.h
org/webrtc/wrapper/: DataChannel.cc  DataChannel.h  Delegates.h  GlobalObserver.cc  GlobalObserver.h  Marshalling.cc  Marshalling.h  Media.cc  Media.h  MediaSourceHelper.cc  MediaSourceHelper.h  PeerConnectionInterface.cc  PeerConnectionInterface.h  RTCStatsReport.h  RTMediaStreamSource.cc  RTMediaStreamSource.h  WebRtcMediaSource.cc  WebRtcMediaSource.h  (+4 more)
projects/msvc/: webrtc_winrt_api_win10_x64.vcxproj
solutions/: MeetingPlace.sln  WebRtc.Nuget.sln  WebRtc.Universal.2019.sln  WebRtc.Universal.sln  WebRtc.Win32.2019.sln  WebRtc.Win32.sln  WebRtc.sln  WebRtcUnity.Universal.2019.sln  WebRtcUnity.Universal.sln  WebRtcUnity.sln  WebRtcUnityD3D.sln  WebRtcUnityXaml.sln
solutions/webrtcWinRT/: webrtcWinRT.sln
templates/gns/: args.gn
templates/solutions/: WebRtc.Wrapper.Universal.2019.sln  WebRtc.Wrapper.Universal.sln  WebRtc.Wrapper.Win32.2019.sln  WebRtc.Wrapper.Win32.sln
wrapper/: DataChannel.cc  GlobalObserver.cc  Marshalling.cc  Media.cc  MediaSourceHelper.cc  PeerConnectionInterface.cc  RTMediaStreamSource.cc  WebRtcMediaSource.cc
(+68 files in other folders)
